--- a/src/main/resources/public/scss/template/_icons.scss
+++ b/src/main/resources/public/scss/template/_icons.scss
@@ -68,4 +68,9 @@
   &.i-color-palette {
     @include maskImage('#{$icon-folder-path}icon_color_palette.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
   }
+
+  // 이미지 아이콘
+  &.i-image {
+    @include maskImage('#{$icon-folder-path}icon_image.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
+  }
 }
