--- a/src/main/resources/public/template/layout/navigation.html
+++ b/src/main/resources/public/template/layout/navigation.html
@@ -10,18 +10,18 @@
 * 4) 그룹메뉴는 하위의 메뉴를 열거나 펼칠때만 사용되고 실제 연결은 모두 연결메뉴에서 담당한다.
 * 5) 현재는 2단계의 메뉴 깊이로 고정한다.
 */-->
-<div class="z-navigation">
-	<div class="z-gnb">
-		<div class="z-logo">
-			<img class="z-navigation-logo" th:src="@{/assets/theme/{theme}/media/icons/(theme=${#authentication.details.theme})} + 'icon_logo_white.svg'" width="152" height="26" alt="Zenius ITSM">
+<div th:class="${COMMON_PREFIX} + 'navigation'">
+	<div th:class="${COMMON_PREFIX} + 'gnb'">
+		<div th:class="${COMMON_PREFIX} + 'logo'">
+			<img th:class="${COMMON_PREFIX} + 'img i-navigation-logo'" th:src="@{/assets/theme/{theme}/media/icons/(theme=${#authentication.details.theme})} + 'icon_navigation_logo.svg'" width="152" height="26" alt="Zenius ITSM">
 		</div>
-		<div class="z-menu">
-			<div class="z-menu-area">
+		<div th:class="${COMMON_PREFIX} + 'menu'">
+			<div th:class="${COMMON_PREFIX} + 'menu-area'">
 				<ul>
-					<li class="z-gnb-area" th:each="topMenu : ${#authentication.details.menus}"
+					<li th:class="${COMMON_PREFIX} + 'gnb-area'" th:each="topMenu : ${#authentication.details.menus}"
 							th:order-data="${topMenu.sort}" th:if="${topMenu.pMenuId} == 'menu' and ${topMenu.useYn} == true">
 						<!--/* 그룹 메뉴 */-->
-						<a th:if="${#strings.isEmpty(topMenu.url)}" onclick="accordionMenu(this);" th:data-menugroup="${topMenu.menuId}" class="z-gnb z-gnb-link flex-row"
+						<a th:if="${#strings.isEmpty(topMenu.url)}" onclick="accordionMenu(this);" th:data-menugroup="${topMenu.menuId}" class="z-gnb-link flex-row"
 						   th:classappend="${topMenu.menuId} == ${session.active_url_parent} ? z-active-parent">
 							<span th:class="'z-icon-gnb z-icon-gnb-' + ${topMenu.menuId}"></span>
 							<span class="z-menu-name" th:text="#{|menu.${topMenu.menuId}.parent|}"></span>
@@ -38,7 +38,8 @@
 							</li>
 						</ul>
 						<!--/* 연결 메뉴 */-->
-						<a th:unless="${#strings.isEmpty(topMenu.url)}" th:href="${topMenu.url}" class="z-gnb z-gnb-link flex-row" th:classappend="${topMenu.url} == ${session.active_url} ? z-active">
+						<a th:unless="${#strings.isEmpty(topMenu.url)}" th:href="${topMenu.url}" class="z-gnb-link flex-row"
+						   th:classappend="${topMenu.url} == ${session.active_url} ? z-active">
 							<span th:class="'z-icon-gnb z-icon-gnb-' + ${topMenu.menuId}"></span>
 							<span class="z-menu-name" th:text="#{|menu.${topMenu.menuId}.parent|}"></span>
 							<span th:if="${topMenu.menuId == 'token'}" class="z-token-count align-center" id="token_count">-</span>
