#10923 페이징 MR 응대 - 파라미터 조정

--- a/src/main/resources/public/template/layout/fragments/pagingAreaFragment.html
+++ b/src/main/resources/public/template/layout/fragments/pagingAreaFragment.html
@@ -9,6 +9,7 @@
     <span id="spanCurrentPageNum"></span>
 </div>
 <script type="module">
-    import { zPaging } from '../../assets/js/lib/zPaging.js';
+    import { ZPaging } from '../../assets/js/lib/zPaging.js';
+    let zPaging = new ZPaging();
 </script>
 </html>
